--- a/frontend/web/css/site-admin.css
+++ b/frontend/web/css/site-admin.css
@@ -580,6 +580,7 @@ textarea.form-control {
 .product_item .product_tags .object-tag {
     display: inline-block;
     vertical-align: top;
+    font-size: 12px;
     margin-right: 15px;
     min-width: 32px;
     min-height: 25px;
