Fixed typo in site-admin.css

--- a/frontend/web/css/site-admin.css
+++ b/frontend/web/css/site-admin.css
@@ -693,7 +693,7 @@ textarea.form-control {
     text-align: center;
 }
 
-.object-page .object-trust-docs value {
+.object-page .object-trust-docs .value {
     display: inline-block;
     width: 100%;
     text-align: center;
