--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -1274,6 +1274,133 @@ header .top {
     margin-top: 40px;
 }
 
+.calculator .heading h2 span {
+    text-transform: none;
+}
+
+.calculator .text-price {
+    width: 100%;
+    height: 60px;
+    border: 1px solid #3B34A6;
+    border-radius: 10px;
+    font-size: 37px;
+    text-align: center;
+    color: #3B34A6;
+    background-color: transparent;
+}
+
+.calculator .form-group > .irs {
+    margin-top: -31px;
+    padding: 0 10px;
+}
+
+.calculator .irs-min,
+.calculator .irs-max {
+    top: auto;
+    bottom: -20px;
+    color: #3B34A6;
+    font-size: 18px;
+    background-color: transparent;
+    visibility: visible !important;
+}
+
+.calculator .irs-single {
+    display: none !important;
+}
+
+.calculator .group-name {
+    font-size: 18px;
+}
+
+.calculator .radio-group {
+    border: 1px solid #AEAEAE;
+    border-radius: 5px;
+    background-color: #F6F5F5;
+}
+/* TODO: Префиксы */
+.calculator .radio-group .radio {
+    position: relative;
+    flex-basis: 33.3333%;
+    min-height: 50px;
+    margin: 0;
+}
+
+.calculator .radio-group-pay .radio {
+    flex-basis: 50%;
+}
+
+.calculator .radio-group .radio input,
+.calculator .checkbox-additional input {
+    position: absolute;
+    left: -9999px;
+}
+
+.calculator .radio-group .radio label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 5px;
+}
+.calculator .radio-group .radio label,
+.calculator .checkbox-additional label {
+    padding-left: 0;
+}
+
+.calculator .radio-group .radio input:checked + label {
+    background-color: #3B34A6;
+    color: #ffffff;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    line-height: 60px;
+}
+
+.calculator .radio-group .radio input:disabled + label,
+.calculator .checkbox-additional input:disabled + label {
+    opacity: 0.45;
+}
+
+.calculator .radio {
+    padding: 0;
+}
+
+.calculator .checkbox {
+    padding: 0 20px 0 0;
+}
+/* TODO: Префиксы */
+.calculator .checkbox-additional {
+    padding: 30px 0;
+    justify-content: flex-start;
+    align-items: baseline;
+}
+
+.calculator .checkbox-additional label {
+    font-size: 12px;
+}
+
+.calculator .checkbox-additional label > * {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.calculator .checkbox-additional label .square {
+    width: 15px;
+    height: 15px;
+    border: 1px solid #3B34A6;
+    background-color: #F6F5F5;
+    border-radius: 2px;
+    margin-right: 5px;
+}
+
+.calculator .checkbox-additional input:checked + label .square {
+    background-color: #3B34A6;
+}
+
 .calculator .item {
     position: relative;
     overflow: hidden;
@@ -1449,7 +1576,7 @@ header .top {
 }
 
 .calculator .irs-line {
-    height: 3px;
+    height: 1px;
     top: 30px;
 }
 
