--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -1473,6 +1473,11 @@ header .top {
     font-size: 21px;
 }
 
+.consultation-form .checkbox label {
+    padding-left: 0;
+    padding-bottom: 20px;
+}
+
 .calculator .checkbox-additional label > *,
 .consultation-form .checkbox label > * {
     display: inline-block;
